Integration of real AI Modal sorting of patients on triage score